# ProjectMaker

./: README.md  make_project.sh
TemplateProject/: CMakeLists.txt
TemplateProject/src/: CMakeLists.txt  TemplateProject.cpp  TemplateProject.h
TemplateProject/unit_tests/: CMakeLists.txt
TemplateProject/unit_tests/tests/: CMakeLists.txt  TemplateProject_test.cpp
